Somtoday_Laurens.log
21:56 18-12-2024

# Get in right directory

# Get up to date
Already up to date.

# Run main file

# Upload to Github
[main 7f1368c] 215618122024
 1 file changed, 199 insertions(+), 199 deletions(-)
To github.com:LaurensGamet/Somtoday_Laurens.git
   0e9e627..7f1368c  main -> main


22:00 18-12-2024

# Get in right directory

# Get up to date
Already up to date.

# Run main file

# Upload to Github
[main 9706713] 220018122024
 1 file changed, 199 insertions(+), 199 deletions(-)
To github.com:LaurensGamet/Somtoday_Laurens.git
   7f1368c..9706713  main -> main


22:09 18-12-2024

# Get in right directory

# Get up to date
From github.com:LaurensGamet/Somtoday_Laurens
   9706713..0b6fa0f  main       -> origin/main
Updating 9706713..0b6fa0f
Fast-forward
 main.py | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)

# Run main file
  File "/home/laurens/Somtoday_Laurens/main.py", line 128
    "SUMMARY:tm208\, tm137\, tm214\, tm215",,
                                            ^
SyntaxError: invalid syntax

# Upload to Github
On branch main
Your branch is up to date with 'origin/main'.

nothing to commit, working tree clean
Everything up-to-date


